feat: add effect hover, focus-visible and active in section discount in page catalog

--- a/src/scss/components/_catalogDiscount.scss
+++ b/src/scss/components/_catalogDiscount.scss
@@ -12,6 +12,16 @@
         line-height: 130%;
         color: var(--grey-shade-color);
         cursor: pointer;
+
+        @include hover {
+          +& {
+            color: var(--primary-color);
+          }
+        }
+
+        &:active {
+          color: var(--primary-shade-color);
+        }
       }
 
       &-input {
@@ -26,6 +36,7 @@
         &-span {
           position: relative;
           padding-left: 32px;
+          transition: color .3s ease-in-out;
 
           &::before {
             content: "";
@@ -37,6 +48,12 @@
             border: 1px solid var(--grey-color);
             border-radius: 2px;
             transition: all .3s ease-in-out;
+          }
+
+          @include hover {
+            +&::before {
+              border-color: var(--primary-color);
+            }
           }
 
           &::after {
@@ -60,6 +77,14 @@
 
         &:checked + .catalog__discount-form-input-span::after {
           opacity: 1;
+        }
+
+        &:focus-visible:not(:hover):not(:active) + .catalog__discount-form-input-span {
+          color: var(--primary-light-color);
+        }
+
+        &:focus-visible:not(:hover):not(:active) + .catalog__discount-form-input-span::before {
+          background-color: var(--primary-light-color);
         }
       }
     }
