feat: add section oksford in page catalog

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,4 +34,5 @@
 @import "./components/catalogNoUi";
 @import "./components/catalogDiscount";
 @import "./components/catalogColors";
+@import "./components/catalogOksford";
 
