--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -7,6 +7,7 @@
         @include('catalogPrice.html')
         @include('catalogDiscount.html')
         @include('catalogColors.html')
+        @include('catalogOksford.html')
       </div>
       <div class="catalog__right"></div>
     </div>
