--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -9,7 +9,12 @@
         @include('catalogColors.html')
         @include('catalogOksford.html')
       </div>
-      <div class="catalog__right"></div>
+      <div class="catalog__right">
+        <h2 class="catalog__right-title">Каталог</h2>
+        <div class="catalog__swiper swiper">
+          @include('catalogCard.html')
+        </div>
+      </div>
     </div>
   </div>
 </section>
