--- a/src/partials/rating.html
+++ b/src/partials/rating.html
@@ -2,7 +2,7 @@
   <div class="container rating__container">
     <h2 class="section-title rating__title">Высокий рейтинг</h2>
     <div class="rating__items">
-      @include('card.html')
+      @include('ratingCard.html')
     </div>
     <button class="btn-reset btn-all rating__btn js-show-btn">Смотреть больше товаров</button>
   </div>
