--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,12 +1,12 @@
 .card {
 
   &__item {
-    padding: 30px 30px 30px 30px;
     border-radius: 10px;
     background-color: var(--grey-light-color);
   }
 
   &__content {
+    padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
