--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -14,6 +14,7 @@
         <div class="catalog__swiper swiper">
           @include('catalogCard.html')
         </div>
+        <div class="swiper-pagination catalog__swiper-pagination"></div>
       </div>
     </div>
   </div>
