--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,4 +35,5 @@
 @import "./components/catalogDiscount";
 @import "./components/catalogColors";
 @import "./components/catalogOksford";
+@import "./components/catalogSwiper";
 
