--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,11 @@
 @import "./components/card";
 @import "./components/map";
 @import "./components/header";
+@import "./components/logoLink";
+@import "./components/selectRegion";
+@import "./components/phoneLink";
+@import "./components/navInfo";
+@import "./components/navNavigation";
 @import "./components/hero";
 @import "./components/special";
 @import "./components/rating";
