fix: refactor line header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,14 +9,16 @@
       @include('navInfo.html')
     </div>
   </div>
-  <div class="header__line header__line-two">
+  <div class="header__line header__line-second"></div>
+  <div class="header__line header__line-third">
     <div class="container header__container">
       @include('logoLink.html')
       @include('navNavigation.html')
     </div>
   </div>
-  <div class="header__line header__line-tree"></div>
-  <div class="header__line header__line-four"></div>
+  <div class="header__line header__line-fourth">
+    
+  </div>
 </header>
 
 <!--<header class="header">
