--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -13,6 +13,10 @@
       padding-bottom: 14px;
       background-color: var(--grey-light-color);
     }
+
+    &-third {
+      margin-bottom: 32px;
+    }
   }
 }
 
