--- a/src/scss/components/_logoLink.scss
+++ b/src/scss/components/_logoLink.scss
@@ -1,5 +1,5 @@
 .header {
-  
+
   &__line {
 
     &-first {
@@ -9,7 +9,7 @@
       }
     }
 
-    &-two {
+    &-third {
 
       & .logo__link {
         margin-right: auto;
