--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,9 @@
 @import "./components/phoneLink";
 @import "./components/navInfo";
 @import "./components/navNavigation";
+@import "./components/formSearch";
+@import "./components/searchCatalog";
+@import "./components/searchCategory";
 @import "./components/hero";
 @import "./components/special";
 @import "./components/rating";
