--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,9 +1,10 @@
 .header {
+  margin-bottom: 32px;
 
-&__container {
-  display: flex;
-  align-items: center;
-}
+  &__container {
+    display: flex;
+    align-items: center;
+  }
 
   &__line {
 
