feat: add userShop

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,6 +19,7 @@
   <div class="header__line header__line-fourth">
     <div class="container header__container">
       @include('formSearch.html')
+      @include('userShopBtn.html')
     </div>
   </div>
 </header>
@@ -98,18 +99,6 @@
 
     </form>
 
-    <div class="header__usershop">
-      <button class="btn-reset header__user">
-        <svg class="header__user-img">
-          <use xlink:href="img/sprite.svg#user"></use>
-        </svg>
-      </button>
-      <button class="btn-reset header__shop">
-        <span class="header__shop-count">0</span>
-        <svg class="header__shop-img">
-          <use xlink:href="img/sprite.svg#shop"></use>
-        </svg>
-      </button>
-    </div>
+    
   </div>
 </header> -->
