--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import "./components/formSearch";
 @import "./components/searchCatalog";
 @import "./components/searchCategory";
+@import "./components/userShopBtn";
 @import "./components/hero";
 @import "./components/special";
 @import "./components/rating";
