feat: add perfectPixel desktop header

--- a/src/scss/components/_navNavigation.scss
+++ b/src/scss/components/_navNavigation.scss
@@ -5,7 +5,8 @@
     &-third {
 
       & .nav__navigation {
-        width: 73.75%;
+        width: 74.35%;
+        padding-right: 3px;
       }
 
       & .nav__navigation-list {
