--- a/src/scss/components/_phoneLink.scss
+++ b/src/scss/components/_phoneLink.scss
@@ -1,6 +1,6 @@
-.header {
-
-  & .phone__link {
+.phone {
+  &__link {
+    padding-top: 1px;
     margin-right: auto;
     display: flex;
     align-items: center;
@@ -8,7 +8,7 @@
     line-height: 100%;
     color: var(--secondary-color);
 
-    & .phone__link-img {
+    &-img {
       width: 22px;
       height: 22px;
       fill: var(--secondary-color);
