--- a/src/scss/components/_selectRegion.scss
+++ b/src/scss/components/_selectRegion.scss
@@ -34,18 +34,23 @@
       -o-transition: color .3s ease-in-out;
       transition: color .3s ease-in-out;
     }
+
+    .choices[data-type*=select-one]:after {
+      top: 53%;
+    }
   }
 
   &__region {
 
     &-wrap {
+      padding-top: 3.5px;
       position: relative;
       z-index: 40;
-      margin-right: 30px;
+      margin-right: 20.5px;
     }
 
     &-text {
-      margin-right: 4px;
+      margin-right: 5px;
       font-size: 16px;
       line-height: 120%;
       color: var(--night-rider-color);
