--- a/src/partials/selectRegion.html
+++ b/src/partials/selectRegion.html
@@ -1,9 +1,11 @@
-<label class="choosing__region-text" for="select-region">
-  Ваш регион:
-</label>
-<select class="choosing__region-select" name="selectRegion" id="select-region">
-  <option value="Москва">Москва</option>
-  <option value="Казань">Казань</option>
-  <option value="Уфа">Уфа</option>
-  <option value="Пермь">Пермь</option>
-</select>
+<div class="choosing-region choosing__region-wrap choosing__region-wrap--first">
+  <label class="choosing__region-text" for="select-region">
+    Ваш регион:
+  </label>
+  <select class="choosing__region-select" name="selectRegion" id="select-region">
+    <option value="Москва">Москва</option>
+    <option value="Казань">Казань</option>
+    <option value="Уфа">Уфа</option>
+    <option value="Пермь">Пермь</option>
+  </select>
+</div>
