--- a/src/scss/components/_searchCategory.scss
+++ b/src/scss/components/_searchCategory.scss
@@ -56,7 +56,7 @@
       font-size: 16px;
       line-height: 21px;
       color: var(--night-rider-color);
-      transition: color .3s ease-in-out;
+      transition: color .3s ease-in-out, background-color .3s ease-in-out;
 
       @include hover {
         +& {
@@ -70,4 +70,3 @@
     }
   }
 }
-
