--- a/src/scss/components/_selectRegion.scss
+++ b/src/scss/components/_selectRegion.scss
@@ -5,10 +5,26 @@
     align-items: center;
 
     & .choices__list--single {
+      position: relative;
       padding: 0;
       font-size: 16px;
       line-height: 120%;
       color: var(--primary-color);
+      transition: color .3s ease-in-out;
+
+      @include hover {
+        +& {
+          color: var(--primary-light-color);
+        }
+      }
+
+      &:focus-visible:not(:hover):not(:active) {
+        color: var(--primary-shade-color);
+      }
+
+      &:active {
+        color: var(--primary-shade-color);
+      }
     }
 
     & .choices[data-type*=select-one] {
@@ -37,6 +53,42 @@
 
     .choices[data-type*=select-one]:after {
       top: 53%;
+    }
+
+    & .choices[data-type*=select-one]::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: -4px;
+      width: 100%;
+      height: 100%;
+      background-color: var(--pink-violet-color);
+      transform: translate(0, 0) scaleX(0);
+      transform-origin: center;
+      transition: transform .3s ease-in-out;
+    }
+
+    & .choices[data-type*=select-one]:focus-visible:not(:hover):not(:active)::before {
+      transform: translate(0, 0) scaleX(1);
+    }
+
+    & .choices__list--dropdown {
+      left: -4px;
+    }
+
+    .choices__list--dropdown .choices__item, .choosing-category .choosing-category .choices__list[aria-expanded] .choices__item {
+      font-size: 14px;
+      line-height: 130%;
+      color: var(--night-rider-color);
+      transition: color .3s ease-in-out, background-color .3s ease-in-out;
+
+      @include hover {
+        +& {
+          color: var(--primary-light-color);
+        }
+      }
     }
   }
 
