feat: add hover, focus0visible and active in phone link

--- a/src/partials/phoneLink.html
+++ b/src/partials/phoneLink.html
@@ -1,4 +1,4 @@
-<a class="phone__link">
+<a href="tel:+74958854547" class="phone__link">
   <svg class="phone__link-img">
     <use xlink:href="img/sprite.svg#phone"></use>
   </svg>
