--- a/src/scss/components/_phoneLink.scss
+++ b/src/scss/components/_phoneLink.scss
@@ -1,5 +1,6 @@
 .phone {
   &__link {
+    position: relative;
     padding-top: 1px;
     margin-right: auto;
     display: flex;
@@ -7,6 +8,8 @@
     font-size: 14px;
     line-height: 100%;
     color: var(--secondary-color);
+    transition: color .3s ease-in-out;
+    z-index: 0;
 
     &-img {
       width: 22px;
@@ -14,6 +17,44 @@
       fill: var(--secondary-color);
       transition: fill .3s ease-in-out;
       z-index: 1;
+    }
+
+    @include hover {
+      +& {
+        color: var(--secondary-light-color);
+      }
+
+      +& .phone__link-img {
+        fill: var(--secondary-light-color);
+      }
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: var(--bone-color);
+      transform: translate(0, 0) scaleX(0);
+      transform-origin: center;
+      transition: transform .3s ease-in-out;
+      z-index: -1;
+    }
+
+    &:focus-visible:not(:hover):not(:active)::before {
+      transform: translate(0, 0) scaleX(1);
+    }
+
+    &:active {
+      color: var(--secondary-shade-color);
+
+      & .phone__link-img {
+        fill: var(--secondary-shade-color);
+      }
     }
   }
 }
