feat: add hover, focus0visible and active in nav info

--- a/src/scss/components/_navInfo.scss
+++ b/src/scss/components/_navInfo.scss
@@ -1,5 +1,4 @@
 .header {
-
   .nav__info {
     width: 55.46875%;
 
@@ -22,6 +21,41 @@
       color: var(--grey-color);
       transition: color .3s ease-in-out;
       outline: none;
+      z-index: 0;
+
+      @include hover {
+        +& {
+          color: var(--primary-color);
+        }
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: -1px;
+        right: 0;
+        bottom: 0;
+        left: -10px;
+        width: calc(100% + 20px);
+        height: calc(100% + 2px);
+        background-color: var(--pink-violet-color);
+        z-index: -1;
+        transform: translate(0, 0) scaleX(0);
+        transform-origin: center;
+        transition: transform .3s ease-in-out;
+      }
+
+      &:focus-visible:not(:hover):not(:active)::before {
+        transform: translate(0, 0) scaleX(1);
+      }
+
+      &:focus-visible:not(:hover):not(:active) {
+        color: var(--primary-shade-color);
+      }
+
+      &:active {
+        color: var(--primary-shade-color);
+      }
     }
   }
 }
