--- a/src/scss/components/_logoLink.scss
+++ b/src/scss/components/_logoLink.scss
@@ -1,5 +1,14 @@
 .header {
 
+  & .logo__link {
+    transition: outline .1s ease-in-out;
+  }
+
+  & .logo__link:focus-visible {
+    outline: 2px solid var(--primary-color);
+    outline-offset: 5px;
+  }
+
   &__line {
 
     &-first {
