--- a/src/scss/components/_userShopBtn.scss
+++ b/src/scss/components/_userShopBtn.scss
@@ -8,6 +8,7 @@
   }
 
   &__user {
+    position: relative;
     width: 26px;
     height: 29px;
 
@@ -15,6 +16,41 @@
       width: 26px;
       height: 28px;
       fill: var(--primary-color);
+      transition: fill .3s ease-in-out;
+
+      @include hover {
+        +& {
+          fill: var(--primary-light-color);
+        }
+      }
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -4px;
+      right: 0;
+      bottom: 0;
+      left: -4px;
+      width: calc(100% + 8px);
+      height: calc(100% + 8px);
+      background-color: var(--primary-light-color);
+      transform: translate(0, 0) scaleX(0);
+      transform-origin: center;
+      transition: transform .3s ease-in-out;
+      z-index: -1;
+    }
+
+    &:focus-visible:not(:active):not(:hover)::before {
+      transform: translate(0, 0) scaleX(1);
+    }
+
+    &:focus-visible:not(:active):not(:hover) .usershop__user-img {
+      fill: var(--white-color);
+    }
+
+    &:active .usershop__user-img {
+      fill: var(--primary-shade-color);
     }
   }
 
@@ -42,6 +78,41 @@
       width: 30px;
       height: 28px;
       fill: var(--primary-color);
+      transition: fill .3s ease-in-out;
+
+      @include hover {
+        +& {
+          fill: var(--primary-light-color);
+        }
+      }
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -4px;
+      right: 0;
+      bottom: 0;
+      left: -14px;
+      width: calc(100% + 18px);
+      height: calc(100% + 8px);
+      background-color: var(--primary-light-color);
+      transform: translate(0, 0) scaleX(0);
+      transform-origin: center;
+      transition: transform .3s ease-in-out;
+      z-index: -1;
+    }
+
+    &:focus-visible:not(:active):not(:hover)::before {
+      transform: translate(0, 0) scaleX(1);
+    }
+
+    &:focus-visible:not(:active):not(:hover) .usershop__shop-img {
+      fill: var(--white-color);
+    }
+
+    &:active .usershop__shop-img {
+      fill: var(--primary-shade-color);
     }
   }
 }
