feat: add adaptive header 1024

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,12 @@
       @include('navInfo.html')
     </div>
   </div>
-  <div class="header__line header__line-second"></div>
+  <div class="header__line header__line-second">
+    <div class="container header__container">
+      @include('navInfo.html')
+      @include('userShopBtn.html')
+    </div>
+  </div>
   <div class="header__line header__line-third">
     <div class="container header__container">
       @include('logoLink.html')
