--- a/src/scss/components/_formSearch.scss
+++ b/src/scss/components/_formSearch.scss
@@ -5,5 +5,11 @@
     display: flex;
     align-items: center;
     width: 82.890625%;
+
+    @include tablet {
+      & {
+        width: 100%;
+      }
+    }
   }
 }
