--- a/src/scss/components/_searchCatalog.scss
+++ b/src/scss/components/_searchCatalog.scss
@@ -6,6 +6,12 @@
       position: relative;
       z-index: 0;
       width: 73.4%;
+
+      @include tablet {
+        & {
+          width: 68.5%;
+        }
+      }
     }
 
     &-input {
