--- a/src/partials/navNavigation.html
+++ b/src/partials/navNavigation.html
@@ -1,4 +1,11 @@
 <nav class="nav__navigation" title="Навигация по сайту" data-menu>
+
+  <button class="btn-reset nav__navigation-close" data-menu-close>
+    <svg class="nav__navigation-close-img">
+      <use xlink:href="img/sprite.svg#burgerClose"></use>
+    </svg>
+  </button>
+
   <ul class="list-reset nav__navigation-list">
     <li class="nav__navigation-item"><a href="catalog.html" class="nav__navigation-link" data-menu-item data-scroll>Каталог</a></li>
     <li class="nav__navigation-item"><a href="#" class="nav__navigation-link" data-menu-item data-scroll>Магазины</a></li>
