--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 
 // подключения компонентов страницы
 @import "./components/select";
+@import "./components/burger";
 @import "./components/customPagination";
 @import "./components/btns";
 @import "./components/tooltip";
