--- a/src/scss/components/_navNavigation.scss
+++ b/src/scss/components/_navNavigation.scss
@@ -1,69 +1,93 @@
-.header {
+.nav {
 
-  &__line {
+  &__navigation {
 
-    &-third {
+    &-list {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
 
-      & .nav__navigation {
-        width: 74.35%;
-        padding-right: 3px;
+    &-link {
+      position: relative;
+      font-size: 16px;
+      line-height: 22px;
+      color: var(--night-rider-color);
+      transition: color .3s ease-in-out;
 
-        @include tablet {
-          & {
-            width: 73.65%;
-            padding-right: 2px;
-            padding-bottom: 4px;
-          }
+      @include hover {
+        +& {
+          color: var(--primary-color);
         }
       }
 
-      & .nav__navigation-list {
+      &::before {
+        content: '';
+        position: absolute;
+        top: -1px;
+        right: 0;
+        bottom: 0;
+        left: -10px;
+        width: calc(100% + 20px);
+        height: calc(100% + 2px);
+        background-color: var(--pink-violet-color);
+        z-index: -1;
+        transform: translate(0, 0) scaleX(0);
+        transform-origin: center;
+        transition: transform .3s ease-in-out;
+      }
+
+      &:focus-visible:not(:hover):not(:active)::before {
+        transform: translate(0, 0) scaleX(1);
+      }
+
+      &:focus-visible:not(:hover):not(:active) {
+        color: var(--night-rider-color);
+      }
+
+      &:active {
+        color: var(--primary-shade-color);
+      }
+    }
+
+    &-close {
+      display: none;
+
+      @include small-tablet {
+        & {
+          display: block;
+        }
+      }
+
+      &-img {
+        width: 24px;
+        height: 24px;
+        fill: var(--primary-color);
+      }
+    }
+
+    @include small-tablet {
+      & {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
+        flex-direction: column;
+        position: fixed;
+        left: 0;
+        top: 70px;
+        z-index: 500;
+        overflow-y: auto;
+        width: 100%;
+        height: var(--vh);
+        background-color: var(--white-color);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity .3s ease-in-out, visibility .3s ease-in-out;
       }
-    }
-  }
-
-  & .nav__navigation-link {
-    position: relative;
-    font-size: 16px;
-    line-height: 22px;
-    color: var(--night-rider-color);
-    transition: color .3s ease-in-out;
-
-    @include hover {
-      +& {
-        color: var(--primary-color);
-      }
-    }
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: -1px;
-      right: 0;
-      bottom: 0;
-      left: -10px;
-      width: calc(100% + 20px);
-      height: calc(100% + 2px);
-      background-color: var(--pink-violet-color);
-      z-index: -1;
-      transform: translate(0, 0) scaleX(0);
-      transform-origin: center;
-      transition: transform .3s ease-in-out;
-    }
-
-    &:focus-visible:not(:hover):not(:active)::before {
-      transform: translate(0, 0) scaleX(1);
-    }
-
-    &:focus-visible:not(:hover):not(:active) {
-      color: var(--night-rider-color);
-    }
-
-    &:active {
-      color: var(--primary-shade-color);
     }
   }
 }
+
+.menu--active {
+  opacity: 1;
+  visibility: visible;
+}
+
