--- a/src/scss/components/_searchCategory.scss
+++ b/src/scss/components/_searchCategory.scss
@@ -62,9 +62,8 @@
     & .choices__list--dropdown .choices__list, .choosing-category .choices__list[aria-expanded] .choices__list {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      column-gap: 30px;
       padding: 58px 0 10px 0;
-      max-height: 280px;
+      max-height: 300px;
     }
 
     & .choices__list--dropdown .choices__item, .choosing-category .choices__list[aria-expanded] .choices__item {
@@ -84,6 +83,19 @@
       @include hover {
         +& {
           color: var(--primary-light-color);
+        }
+      }
+
+      @include high-tablet {
+        & {
+          padding-left: 5px;
+        }
+      }
+
+      @include small-tablet {
+        & {
+          font-size: 12px;
+          line-height: 18px;
         }
       }
     }
