feat: add adaptive header mobile

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,6 +11,8 @@
     <div class="container header__container">
       @include('navInfo.html')
       @include('userShopBtn.html')
+      @include('selectRegionMobile.html')
+      @include('phoneLink.html')
     </div>
   </div>
   <div class="header__line header__line-third">
