--- a/src/scss/components/_formSearch.scss
+++ b/src/scss/components/_formSearch.scss
@@ -11,5 +11,11 @@
         width: 100%;
       }
     }
+
+    @include mobile {
+      & {
+        flex-direction: column;
+      }
+    }
   }
 }
