feat: add adaptive mobile burger

--- a/src/partials/navNavigation.html
+++ b/src/partials/navNavigation.html
@@ -14,4 +14,6 @@
     <li class="nav__navigation-item"><a href="#" class="nav__navigation-link" data-menu-item data-scroll>Дисконт</a></li>
     <li class="nav__navigation-item"><a href="contacts.html" class="nav__navigation-link" data-menu-item data-scroll>Контакты</a></li>
   </ul>
+
+  @include('navInfo.html')
 </nav>
